--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create New Article</h1>
+<h1>Edit existing Article</h1>
 
 <% if @article.errors.any? %>
 <h2>The following error(s) prevent to create new article</h2>
@@ -25,4 +25,5 @@
   </p>
 
   <%= link_to 'Back to articles listing', articles_path %>
+  
 <% end %>
